--- a/ms-learn-pipeline.yml
+++ b/ms-learn-pipeline.yml
@@ -6,14 +6,17 @@ trigger: none
 pool:
   vmImage: ubuntu-latest
 variables:
-  dockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/Dockerfile'
+  webdockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/Dockerfile'
   webrepository: 'web'
+  containerRegistry : 'acrpush'
+  leaderboarddockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.LeaderboardContainer/Dockerfile'
+  leaderboardrepository: 'leaderboard'
   tag: $(Build.BuildId)
 steps:
 - task: Docker@2
   displayName: "Build and push the web image"
   inputs:
-    containerRegistry: 'acrpush'
+    containerRegistry: '$(containerRegistry)'
     repository: '$(webrepository)'
     command: 'buildAndPush'
     Dockerfile: '$(dockerfile)'
