--- a/Tailspin.SpaceGame.LeaderboardContainer/Dockerfile
+++ b/Tailspin.SpaceGame.LeaderboardContainer/Dockerfile
@@ -5,9 +5,9 @@ EXPOSE 80
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 RUN dir -s
-COPY ["Tailspin.SpaceGame.LeaderboardContainer/Tailspin.SpaceGame.LeaderboardContainer.csproj", "Tailspin.SpaceGame.LeaderboardContainer/"]
+COPY Tailspin.SpaceGame.LeaderboardContainer.csproj .
 
-RUN dotnet restore "Tailspin.SpaceGame.LeaderboardContainer/Tailspin.SpaceGame.LeaderboardContainer.csproj"
+RUN dotnet restore Tailspin.SpaceGame.LeaderboardContainer.csproj
 COPY . .
 WORKDIR "/src/Tailspin.SpaceGame.LeaderboardContainer"
 RUN dotnet build "Tailspin.SpaceGame.LeaderboardContainer.csproj" -c Release -o /app/build
