--- a/ms-learn-pipeline.yml
+++ b/ms-learn-pipeline.yml
@@ -58,4 +58,12 @@ steps:
     kubernetesCluster: '$(k8s)'
     manifests: |
       'manifestbis/deployment.yaml'
+- task: KubernetesManifest@1
+  inputs:
+    action: 'deploy'
+    connectionType: 'azureResourceManager'
+    azureSubscriptionConnection: 'sp-learn-aks'
+    azureResourceGroup: '$(rg)'
+    kubernetesCluster: '$(k8s)'
+    manifests: |
       'manifestbis/services.yaml'
