--- a/template/docker.yaml
+++ b/template/docker.yaml
@@ -5,12 +5,12 @@ parameters:
   dockerfile: ''
   tag: ''
   displayName: ''
-- job: ${{ parameters.name }}
+- job: '${{ parameters.name }}'
   steps:
   - task: Docker@2
     displayName: '${{ parameters.displayName }}'
     inputs:
-      containerRegistry: ${{ parameters.containerRegistry }}
+      containerRegistry: '${{ parameters.containerRegistry }}'
       repository: '${{ parameters.repository }}'
       command: 'buildAndPush'
       Dockerfile: '${{ parameters.dockerfile }}'
